--- a/Calculator_09/app/src/main/res/layout-large/activity_main.xml
+++ b/Calculator_09/app/src/main/res/layout-large/activity_main.xml
@@ -9,7 +9,7 @@
    >
 
     <LinearLayout
-        android:layout_width="410dp"
+        android:layout_width="@dimen/xlarge_width"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/text_layout"
@@ -25,8 +25,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/xlarge_width"
+        android:layout_height="@dimen/xlarge_height"
         android:layout_below="@+id/text_layout"
         android:orientation="vertical">
 
