--- a/Calculator_09/app/src/main/res/values/dimens.xml
+++ b/Calculator_09/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="xlarge_width">960dp</dimen>
-    <dimen name="xlarge_height">720dp</dimen>
+
+    <dimen name="normal_width">470dp</dimen>
+    <dimen name="normal_height">320dp</dimen>
 
 </resources>
