--- a/Calculator_09/app/src/main/res/layout-dpi/activity_main.xml
+++ b/Calculator_09/app/src/main/res/layout-dpi/activity_main.xml
@@ -9,7 +9,7 @@
    >
 
     <LinearLayout
-        android:layout_width="@dimen/xlarge_width"
+        android:layout_width="410dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/text_layout"
@@ -25,8 +25,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="@dimen/xlarge_width"
-        android:layout_height="@dimen/xlarge_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/text_layout"
         android:orientation="vertical">
 
@@ -61,6 +61,100 @@
                 android:layout_width="110dp"
                 android:layout_height="100dp"
                 android:background="@drawable/opertion_border"
+                android:text="/"
+                android:textSize="40sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="4"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="5"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="6"
+                android:textSize="40sp" />
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="100dp"
+                android:background="@drawable/opertion_border"
+                android:text="*"
+                android:textSize="40sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="1"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="2"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="3"
+                android:textSize="40sp" />
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="100dp"
+                android:background="@drawable/opertion_border"
+                android:text="-"
+                android:textSize="40sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="0"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="."
+                android:textSize="40sp" />
+
+
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="100dp"
+                android:background="@drawable/opertion_border"
                 android:text="+"
                 android:textSize="40sp" />
         </LinearLayout>
@@ -69,108 +163,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
             <Button
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="7"
+                android:background="@drawable/opertion_border"
+                android:text="C"
                 android:textSize="40sp" />
-
             <Button
-                android:layout_width="100dp"
+                android:layout_width="210dp"
                 android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="8"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="9"
-                android:textSize="40sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="7"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="8"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="9"
-                android:textSize="40sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="7"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="8"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="9"
-                android:textSize="40sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="7"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="8"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="9"
+                android:background="@drawable/opertion_border"
+                android:text="="
                 android:textSize="40sp" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
+
+
