--- a/Calculator_09/app/src/main/res/layout-xhdpi/activity_main.xml
+++ b/Calculator_09/app/src/main/res/layout-xhdpi/activity_main.xml
@@ -5,35 +5,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/text_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:orientation="vertical">
+    android:orientation="vertical"
+   >
 
+    <LinearLayout
+        android:layout_width="410dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/text_layout"
+        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="95dp"
             android:background="@android:color/darker_gray"
             android:hint="123456"
-            android:paddingLeft="150dp"
+            android:paddingLeft="120dp"
             android:textColorHint="@android:color/white"
-            android:textSize="70sp" />
+            android:textSize="80sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_layout"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
             android:orientation="horizontal">
@@ -60,7 +58,101 @@
                 android:textSize="40sp" />
 
             <Button
-                android:layout_width="match_parent"
+                android:layout_width="110dp"
+                android:layout_height="100dp"
+                android:background="@drawable/opertion_border"
+                android:text="/"
+                android:textSize="40sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="4"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="5"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="6"
+                android:textSize="40sp" />
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="100dp"
+                android:background="@drawable/opertion_border"
+                android:text="*"
+                android:textSize="40sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="1"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="2"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="3"
+                android:textSize="40sp" />
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="100dp"
+                android:background="@drawable/opertion_border"
+                android:text="-"
+                android:textSize="40sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="0"
+                android:textSize="40sp" />
+
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/button_border"
+                android:text="."
+                android:textSize="40sp" />
+
+
+            <Button
+                android:layout_width="110dp"
                 android:layout_height="100dp"
                 android:background="@drawable/opertion_border"
                 android:text="+"
@@ -71,109 +163,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
             <Button
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="7"
+                android:background="@drawable/opertion_border"
+                android:text="C"
                 android:textSize="40sp" />
-
             <Button
-                android:layout_width="100dp"
+                android:layout_width="210dp"
                 android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="8"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="9"
-                android:textSize="40sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="7"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="8"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="9"
-                android:textSize="40sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="7"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="8"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="9"
-                android:textSize="40sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="7"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="8"
-                android:textSize="40sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/button_border"
-                android:text="9"
+                android:background="@drawable/opertion_border"
+                android:text="="
                 android:textSize="40sp" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
-</RelativeLayout>
+
+
