--- a/Calculator_09/app/src/main/res/layout-xhdpi/activity_main.xml
+++ b/Calculator_09/app/src/main/res/layout-xhdpi/activity_main.xml
@@ -15,13 +15,14 @@
         android:id="@+id/text_layout"
         >
         <TextView
+            android:id="@+id/screen"
             android:layout_width="match_parent"
-            android:layout_height="95dp"
+            android:layout_height="105dp"
             android:background="@android:color/darker_gray"
-            android:hint="123456"
-            android:paddingLeft="120dp"
+            android:hint="0"
+            android:gravity="right"
             android:textColorHint="@android:color/white"
-            android:textSize="80sp" />
+            android:textSize="40sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -40,6 +41,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="7"
                 android:textSize="40sp" />
 
@@ -47,6 +49,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="8"
                 android:textSize="40sp" />
 
@@ -54,6 +57,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="9"
                 android:textSize="40sp" />
 
@@ -61,6 +65,7 @@
                 android:layout_width="110dp"
                 android:layout_height="100dp"
                 android:background="@drawable/opertion_border"
+                android:onClick="onClickSign"
                 android:text="/"
                 android:textSize="40sp" />
         </LinearLayout>
@@ -74,6 +79,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="4"
                 android:textSize="40sp" />
 
@@ -81,6 +87,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="5"
                 android:textSize="40sp" />
 
@@ -88,12 +95,15 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="6"
                 android:textSize="40sp" />
+
             <Button
                 android:layout_width="110dp"
                 android:layout_height="100dp"
                 android:background="@drawable/opertion_border"
+                android:onClick="onClickSign"
                 android:text="*"
                 android:textSize="40sp" />
         </LinearLayout>
@@ -107,6 +117,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="1"
                 android:textSize="40sp" />
 
@@ -114,6 +125,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="2"
                 android:textSize="40sp" />
 
@@ -121,12 +133,15 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="3"
                 android:textSize="40sp" />
+
             <Button
                 android:layout_width="110dp"
                 android:layout_height="100dp"
                 android:background="@drawable/opertion_border"
+                android:onClick="onClickSign"
                 android:text="-"
                 android:textSize="40sp" />
         </LinearLayout>
@@ -140,6 +155,7 @@
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="0"
                 android:textSize="40sp" />
 
@@ -147,6 +163,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/button_border"
+                android:onClick="onClick"
                 android:text="."
                 android:textSize="40sp" />
 
@@ -155,6 +172,7 @@
                 android:layout_width="110dp"
                 android:layout_height="100dp"
                 android:background="@drawable/opertion_border"
+                android:onClick="onClickSign"
                 android:text="+"
                 android:textSize="40sp" />
         </LinearLayout>
@@ -163,16 +181,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <Button
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:background="@drawable/opertion_border"
+                android:onClick="onClickRefresh"
                 android:text="C"
                 android:textSize="40sp" />
+
             <Button
                 android:layout_width="210dp"
                 android:layout_height="100dp"
                 android:background="@drawable/opertion_border"
+                android:onClick="onClickCalculate"
                 android:text="="
                 android:textSize="40sp" />
         </LinearLayout>
